<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:padding="8dp">

    <ImageView
        android:id="@+id/carPictureView"
        android:layout_width="396dp"
        android:layout_height="188dp"
        android:contentDescription="@string/car_picture" />

    <TextView
        android:id="@+id/carManufacturer"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="200dp"
        android:layout_marginStart="25dp"
        android:text="@string/manufacturer"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/carModel"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="250dp"
        android:layout_marginStart="25dp"
        android:text="@string/model"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/carRegistartionNumber"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="300dp"
        android:text="@string/registartion_number"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/carYear"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="350dp"
        android:layout_marginStart="25dp"
        android:text="@string/caryear"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/carPrice"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="400dp"
        android:layout_marginStart="25dp"
        android:text="@string/price"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/DateFrom"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="450dp"
        android:layout_marginStart="25dp"
        android:text="@string/date_from"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/dateTo"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="500dp"
        android:layout_marginStart="25dp"
        android:text="@string/date_to"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/PlaceToPickAcar"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="550dp"
        android:layout_marginStart="25dp"
        android:text="@string/place_to_pick_a_car"
        android:textSize="20sp" />

</RelativeLayout>